<resources>
    <string name="app_name">Login page design</string>
    <string name="location_image">Location Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
</resources>